--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.17
-yarn_mappings=1.17+build.5
-loader_version=0.11.3
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.18
+loader_version=0.12.12
 
-# Dependencies
-fabric_version=0.34.9+1.17
+#Fabric api
+fabric_version=0.45.2+1.18
 
 # Mod Properties
 mod_version = 1.0.0
