--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,26 @@
-# Automatically build the project and run any configured tests for every push
-# and submitted pull request. This can help catch issues that only occur on
-# certain platforms or Java versions, and provides a first line of defence
-# against bad commits.
-
-name: build
+name: We do a little building
 on: [pull_request, push]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        # try compiling on both Linux and Windows
-        os: [ubuntu-20.04, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
-      - name: checkout repository
-        uses: actions/checkout@v2
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
       - name: setup jdk
         uses: actions/setup-java@v2
         with:
-          distribution: adopt
-          java-version: 16
-      - name: make gradle wrapper executable
-        if: ${{ runner.os != 'Windows' }}
+          distribution: temurin
+          java-version: 17
+      - name: checkout mod
+        uses: actions/checkout@v2
+      - name: validate gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+      - name: chmod gradle wrapper
         run: chmod +x ./gradlew
+      - name: Print gradle version
+        run: ./gradlew --version
       - name: build
         run: ./gradlew build
       - name: capture build artifacts
-        if: ${{ runner.os == 'Linux'}} # Only upload one set of artifacts, those built from linux
         uses: actions/upload-artifact@v2
         with:
           name: Artifacts
